update all files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    
-      <ul class="right">
-        <li>
-        <% if (user) { %>
-          <a href="/logout"><i class="material-icons left"></i>Log Out</a>
-        <% } else { %>
-          <a href="/auth/google"><i class="material-icons left"></i>Login with Google</a>
-        <% } %>
-        </li>
-      </ul>
-  <h1><%= title %></h1>
-    
-    <p>Prepare To Have Your Mind Blown!!</p>
-  </body>
-</html>
+  <%- include('./partials/header'); %>
+<div id="container">
+  <div id="fold">
+    <div id="inner-fold">
+    <h1> First Time Visiting Our Page??<br>Create An Account to Access Cool Features of This Dimension!!</h1>
+    <p id="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo dicta ipsa nulla eius ex, esse omnis! Asperiores obcaecati ea debitis doloribus? Quisquam aperiam pariatur iure consectetur odit molestias porro exercitationem.</p>
+      <button id="Lrg-btn">hello<a href="./User Interaction/crtAccount.ejs"></a></button>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+</div>
+
+
