--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,160 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+*{
+  margin: 0;
+  padding: 0;
+  
 }
 
-a {
-  color: #00B7FF;
+body {
+  background-color: rgba(28, 26, 26, 0.81);
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: url(https://wallpaperboat.com/wp-content/uploads/2019/04/rick-and-morty-wallpaper-portal-wallpaper-016.jpg);
+  background-size: cover;
+}
+
+
+
+
+
+#nav-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;  
+  background: radial-gradient( rgb(102, 108, 102), rgb(0, 0, 0));
+  font-size: 20px;
+  height: 75px;
+
+  
+}
+
+.links {
+  margin: 25px 0;
+  text-decoration: none;
+  color: black;
+  text-shadow: 1.5px -1.5px white;
+  
+  
+}
+
+p {
+  margin: 25px 0;
+  color: white; 
+  
+  
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 14px 0;
+
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: black;
+  border: .5px solid white;
+  border-radius: 1.5px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #9da599db;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: rgb(30, 203, 21);
+  color: white;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+h1 {
+  color: white;
+
+}
+
+#fold {
+  height: 613px;
+
+}
+
+#search-bar {
+  margin: 15px 0;
+  padding: 14px 16px;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+#search-btn {
+  margin: 15px 0;
+  padding: 10px 16px;
+  font-size: 20px;
+  border-radius: 5px;
+  text-align: center;
+  margin-left: -20px;
+  background-color: lime;
+  border: 2.5px solid black;
+}
+
+#p1 {
+  color: black;
+  text-shadow: 1.5px -1.5px lime;
+  
+}
+
+#login {
+  margin: 8px 0;
+  margin-right: 48px;
+  padding: 15px 40px 16px 16px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: 600;
+  background-color: lime;
+  border: 2.5px solid black;
+  position: relative;
+
+}
+#inner-fold {
+  background-color: rgba(62, 59, 59, 0.66);
+  position: absolute;
+  width:100%;
+  height: 306.5px;
+
+}
+
+
+
+#p2 {
+  color: white;
+  text-decoration: none;
+}
+
+#acct-img {
+position: absolute;
+right: 15px;
+top: 15px;
 }
