add Method-override to server.js

--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,1 +1,18 @@
 <%- include('./partials/header'); %>
+<form action="/comments" method="POST">
+<input type="text" placeholder="Season? Episode?" name="caption"><br>
+<input type="text" placeholder="What do you have to Say?!?" name="content">
+<button>Submit</button>
+</form>
+
+<% comments.forEach(function(c) { %>
+<form action="/comments/<%= c._id%>?_method=DELETE" method="POST">
+    <div id="comment">
+    <div><h1 id="caption"><%= c.caption %></h1></div>
+    <div><p id="content"><%= c.content %></p></div>
+    <button type="submit" id="delete">Delete</button>
+</form>
+
+</div>
+
+<% }) %>
