--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,16 +2,16 @@
 <html>
     <head>
     
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+      
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel='stylesheet' href='/stylesheets/style.css' />
     </head>
     <body>
     
 
     <nav id="nav-bar">
 
-    <p id="p1"> Morty's Mind Bloggers</p>
+    <p id="p1"><a href="/" >Morty's Mind Bloggers</a></p>
       <input type="text" placeholder="Search" id="search-bar"><button id="search-btn">Search</button>
     
     <div class="dropdown">
@@ -35,11 +35,11 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">Funny References 
+      <button class="dropbtn">Comments
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="/views/references">Jokes</a>
+        <a href="/comments/">comment</a>
         
       </div>
     </div>
