--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 *{
   margin: 0;
   padding: 0;
+  /* color: rgb(221,248,150); */
   
 }
 
@@ -97,11 +98,6 @@ h1 {
 
 }
 
-#fold {
-  height: 613px;
-
-}
-
 #search-bar {
   margin: 15px 0;
   padding: 14px 16px;
@@ -140,11 +136,12 @@ h1 {
 }
 #inner-fold {
   background-color: rgba(62, 59, 59, 0.66);
-  position: absolute;
   width:100%;
   height: 306.5px;
 
 }
+
+
 
 
 
@@ -157,4 +154,42 @@ h1 {
 position: absolute;
 right: 15px;
 top: 15px;
+}
+
+#trend {
+  border: 4px solid white;
+  height: 250px;
+
+}
+
+.div {
+  height: 20px;
+  width:150px;
+  background-color: aqua
+}
+
+#div {
+  height: 200px;
+  width:250px;
+  border: 4px solid white;
+  background-color: rgba(62, 59, 59, 0.66);
+}
+
+#showcaption {
+  font-size: 25px;
+
+}
+
+#showcontent {
+  font-size: 14px;
+}
+#caption {
+  font-size: 20px;
+
+}
+
+#comment {
+  border: 2px solid white;
+  width: 250px;
+  background-color: rgba(206, 206, 206, 0.66);
 }
