--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,10 @@
     <div id="inner-fold">
     <h1> First Time Visiting Our Page??<br>Create An Account to Access Cool Features of This Dimension!!</h1>
     <p id="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo dicta ipsa nulla eius ex, esse omnis! Asperiores obcaecati ea debitis doloribus? Quisquam aperiam pariatur iure consectetur odit molestias porro exercitationem.</p>
-      <button id="Lrg-btn">hello<a href="./User Interaction/crtAccount.ejs"></a></button>
+      
     </div>
   </div>
+  <a href=""
 
         
 
