--- a/views/showpage.ejs
+++ b/views/showpage.ejs
@@ -1,6 +1,10 @@
 <%- include('./partials/header'); %>
 
+<div id="page">
 <div id="div">
-<h1 id="showcaption"><%= comment.caption %> </h1>
+<h1 id="showcaption"><%= comment.caption %></h1>
 <p id="showcontent"><%= comment.content %> </p>
 </div>
+</div>
+
+
