--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -145,6 +145,9 @@ h1 {
   height: 75px;
   width: 175px;
   font-size: 30px;
+  border: 4px solid black;
+  border-radius: 10px;
+  background: radial-gradient(rgb(38, 205, 29), rgb(11, 12, 11));
 }
 
 #editpath {
@@ -157,6 +160,9 @@ h1 {
   height: 75px;
   width: 175px;
   font-size: 30px;
+  border: 4px solid black;
+  border-radius: 10px;
+  background: radial-gradient(rgb(38, 205, 29), rgb(11, 12, 11));
 }
 
 #p2 {
@@ -168,18 +174,6 @@ h1 {
 position: absolute;
 right: 15px;
 top: 15px;
-}
-
-#trend {
-  border: 4px solid white;
-  height: 250px;
-
-}
-
-.div {
-  height: 20px;
-  width:150px;
-
 }
 
 #div {
@@ -204,6 +198,7 @@ top: 15px;
 #caption {
   font-size:45px;
   border: 2px solid white;
+  border-radius: 5px;
 
 }
 
@@ -215,6 +210,7 @@ top: 15px;
   background-color: rgba(62, 59, 59, 0.66);
   font-size: 40px;
   position: relative;
+  margin: 10px 0;
 }
 
 #page {
@@ -235,5 +231,7 @@ top: 15px;
   left: 40px;
   border: 2px solid white;
   padding: 10px 10px;
+  background-color: rgba(16, 16, 16, 0.66);
+  border-radius: 10px;
 }
 
