update all files

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,9 +29,8 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="/views/s1Episodes">Season 1</a>
-        <a href="/views/s2Episode">Season 2</a>
-        <a href="/views/s3Episodes">Season 3</a>
+        <a href="/episodes/">Episodes</a>
+        
       </div>
     </div>
     <div class="dropdown">
